Adding analysis to notebook

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "#TWITTER-SWISSCOM DATASETS\n",
     "SP_PATH = 'data/twitter-swisscom/'\n",
-    "TWITTERSWISSCOM_PROCESSED_TWEETS = None #'data/spinn3r_tweets/processed_tweets.json'"
+    "TWITTERSWISSCOM_PROCESSED_TWEETS = 'data/twitter-swisscom/dataset2_english.csv'"
    ]
   },
   {
@@ -984,7 +984,7 @@
    "source": [
     "#Helper functions\n",
     "def get_time_distribution(times):\n",
-    "    publishing_time = times.map(lambda x: x.hour).value_counts()\n",
+    "    publishing_time = times.map(lambda x: x.hour).value_counts() / times.count()\n",
     "    publishing_time.sort_index(inplace=True)\n",
     "    return publishing_time\n",
     "\n",
@@ -1019,15 +1019,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yearly_distribution = sp_df.published.map(lambda x: x.month).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "yearly_distribution = sp_df.published.map(lambda x: x.month).value_counts()\n",
+    "\n",
     "sns.tsplot(data=yearly_distribution, time=yearly_distribution.index)\n",
     "plt.ylabel('number of tweets')\n",
     "plt.title('Distribution of tweets over a 10 months period')\n",
@@ -1409,6 +1402,13 @@
    "metadata": {},
    "source": [
     "### 3.3 Finding keyword matches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define to following helper functions to find matches:"
    ]
   },
   {
@@ -2271,11 +2271,235 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We process the final dictionary using the dict_filtering_final.py script.\n",
+    "\n",
+    "\n",
+    "We now discuss the final results from our dict."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_df = pd.read_pickle('data/spinn3r_tweets/keyword_tweets/final_english_keyworded_tweets.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_keyword = final_df.keywords.dropna().map(lambda x: len(x) > 0 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_keyword.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = final_df[~final_df.keywords.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df[has_keyword].keywords.map(lambda x: ' '.join(x[0])).value_counts().plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sentiment score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(2,2,1)\n",
+    "(final_df[has_keyword].sentiment.value_counts()/final_df[has_keyword].sentiment.count()).plot(kind='bar')\n",
+    "plt.subplot(2,2,2)\n",
+    "(final_df.sentiment.value_counts()/final_df.sentiment.count()).plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(2,2,1)\n",
+    "(final_df[has_keyword].author_gender.value_counts()/final_df[has_keyword].author_gender.count()).plot(kind='bar')\n",
+    "plt.subplot(2,2,2)\n",
+    "(final_df.author_gender.value_counts()/final_df.author_gender.count()).plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Temporal analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_daily(final_df[has_keyword])\n",
+    "plot_daily(final_df)\n",
+    "plt.xlabel('hour')\n",
+    "plt.ylabel('number of tweets')\n",
+    "plt.legend(['filtered', 'all'])\n",
+    "plt.title('Distribution of tweets over 24 hours')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearly_distribution = final_df[has_keyword].published.map(lambda x: x.month).value_counts() / final_df[has_keyword].published.count()\n",
+    "yearly_distribution2 = final_df.published.map(lambda x: x.month).value_counts() /  final_df.published.count()\n",
+    "\n",
+    "sns.tsplot(data=yearly_distribution, time=yearly_distribution.index, color='orange')\n",
+    "sns.tsplot(data=yearly_distribution2, time=yearly_distribution2.index)\n",
+    "plt.legend(['filtered', 'overall'])\n",
+    "plt.ylabel('relative percetage of tweets')\n",
+    "plt.title('Distribution of tweets over a 10 months period')\n",
+    "plt.xticks(range(1, 11),['jan', 'feb', 'mar', 'apr', 'mai', 'jun', 'jul', 'aug', 'sep', 'oct'])\n",
+    "plt.xlabel('month')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Location analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = process_location_data(final_df[has_keyword])\n",
+    "location_geo = gpd.GeoSeries(locations.apply(lambda z: Point(z[1], z[0]), 1), crs={'init': 'epsg:4326'})\n",
+    "location = gpd.GeoDataFrame(final_df[has_keyword][~final_df[has_keyword].geo_point.isnull()], geometry=location_geo) #merged data –useful later on–"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipalities = gpd.read_file('data/geodata/ch-municipalities.shp') #load data\n",
+    "municipalities.geometry = municipalities.geometry.to_crs(location_geo.crs) #change format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#join between region and location\n",
+    "counts = gpd.tools.sjoin(location, municipalities).groupby('id').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add counts to the regions\n",
+    "municipalities.set_index('id', inplace=True)\n",
+    "municipalities['counts'] = counts\n",
+    "municipalities.fillna(0, inplace=True) #if we can't find match we have 0 tweets\n",
+    "municipalities.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipalities_0 = municipalities[municipalities.counts < 1]\n",
+    "municipalities_1 = municipalities[municipalities.counts >= 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SWISS_COORD = [46.85, 8.23]\n",
+    "swiss_map = folium.Map(location = SWISS_COORD, zoom_start = 8, tiles = 'cartodbpositron')\n",
+    "\n",
+    "#layer with municipalities containing more than 10 tweets\n",
+    "swiss_map.choropleth(municipalities_1.to_json(), data = municipalities_1,\n",
+    "                     key_on = 'feature.properties.{}'.format('id'),\n",
+    "                    columns = ['id', 'counts'], fill_color = 'PuRd',\n",
+    "                     legend_name='Number of tweets', fill_opacity=0.9)\n",
+    "#layer with municipalities containing less than 10 tweets in total\n",
+    "swiss_map.choropleth(municipalities_0.to_json(), data = municipalities_0, \n",
+    "                     key_on = 'feature.properties.{}'.format('id'),\n",
+    "                     columns = ['id', 'counts'], fill_color = 'PuBu', \n",
+    "                     threshold_scale=[0, 1], legend_name='Area of little to no data',\n",
+    "                     fill_opacity=0.1, line_opacity=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_map.save('dist.html')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2330,13 +2554,6 @@
     "- **tokenized**                     -> tokenized text of tweet (done by us)\n",
     "- **keywords**                      -> keywords fund in tweets (done by us)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
