Change scripts, remove duplicate, ad notebook update

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -896,6 +896,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_df.tokenized"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1470,7 +1479,7 @@
     "collapsed": true
    },
    "source": [
-    "english_filtered = sp_df[sp_df.lang == 'en']['tokenized'].map(lambda x: match_dict(x, en_dict))"
+    "english_filtered = sp_df['tokenized'].map(lambda x: match_dict(x, en_dict))"
    ]
   },
   {
@@ -1481,9 +1490,9 @@
    "source": [
     "df = pkl.load(open(SP_SMALL_EN_KW, \"rb\" ))\n",
     "\n",
-    "small_english_filtered = df[(df.lang == 'en') & (df.keywords.map(lambda x: x != [] ))]\n",
+    "small_english_filtered = df[(df.keywords.map(lambda x: x != [] ))]\n",
     "print('number of matching tweets: ', small_english_filtered.main.count())\n",
-    "print('percentage of matching tweets: ', small_english_filtered.main.count() / df[df.lang == 'en'].main.count())"
+    "print('percentage of matching tweets: ', small_english_filtered.main.count() / df.main.count())"
    ]
   },
   {
@@ -1539,9 +1548,9 @@
    "outputs": [],
    "source": [
     "df = pkl.load(open(SP_SMALL_FR_KW, \"rb\" ))\n",
-    "small_french_filtered = df[(df.lang == 'fr') & (df.keywords.map(lambda x: x != [] ))]\n",
+    "small_french_filtered = df[(df.keywords.map(lambda x: x != [] ))]\n",
     "print('number of matching tweets: ', small_french_filtered.main.count())\n",
-    "print('percentage of matching tweets: ', small_french_filtered.main.count() / df[df.lang == 'fr'].main.count())"
+    "print('percentage of matching tweets: ', small_french_filtered.main.count() / df.main.count())"
    ]
   },
   {
@@ -1593,9 +1602,9 @@
    "outputs": [],
    "source": [
     "df = pkl.load(open(SP_SMALL_DE_KW, \"rb\" ))\n",
-    "small_german_filtered = df[(df.lang == 'de') & (df.keywords.map(lambda x: x != [] ))]\n",
+    "small_german_filtered = df[(df.keywords.map(lambda x: x != [] ))]\n",
     "print('number of matching tweets: ', small_german_filtered.main.count())\n",
-    "print('percentage of matching tweets: ', small_german_filtered.main.count() / df[df.lang == 'de'].main.count())"
+    "print('percentage of matching tweets: ', small_german_filtered.main.count() / df.main.count())"
    ]
   },
   {
@@ -1657,9 +1666,9 @@
    "outputs": [],
    "source": [
     "df = pkl.load(open(SP_EN_KW, \"rb\" ))\n",
-    "english_filtered = df[(df.lang == 'en') & (df.keywords.map(lambda x: x != [] ))]\n",
+    "english_filtered = df[(df.keywords.map(lambda x: x != [] ))]\n",
     "print('number of matching tweets: ', english_filtered.main.count())\n",
-    "print('percentage of matching tweets: ', english_filtered.main.count()/ df[df.lang == 'en'].main.count())"
+    "print('percentage of matching tweets: ', english_filtered.main.count()/ df.main.count())"
    ]
   },
   {
@@ -1675,7 +1684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first glance we can see that this dictionary gives us many more matches, with about $2\\%$ of all english tweets containing at least one keyword. We also see that the matches tend to be more general about feelings and less about specific illnesses."
+    "At first glance we can see that this dictionary gives us many more matches, with about $1\\%$ of all english tweets containing at least one keyword. We also see that the matches tend to be more general about feelings and less about specific illnesses."
    ]
   },
   {
@@ -1693,6 +1702,15 @@
    "metadata": {},
    "source": [
     "Even though not all tweets express distress (just as before), we can clearly see sadness, loneliness or fear. We also notice that the number of matching tweets has increased greatly (around x10)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_filtered[english_filtered.keywords.map(lambda x: len(x) > 1)].keywords.map(lambda x: str(x)).value_counts().head(10)"
    ]
   },
   {
@@ -1793,7 +1811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that the most frequent words are again 'hate' and 'sad', followed by expressions of lonelyness and emptyness."
+    "We note that the most frequent words are again 'sad', followed by expressions of lonelyness and emptyness."
    ]
   },
   {
@@ -2089,9 +2107,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary = corpora.Dictionary(english_filtered.tokenized)\n",
+    "#remove stopwords for more meaningful results\n",
+    "english_stop_rem = dict_remove_stops(english_filtered.tokenized, 'english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = corpora.Dictionary(english_stop_rem)\n",
     "dictionary.filter_extremes(no_below=2, no_above=.8) #removes too frequent / sparse words\n",
-    "texts = english_filtered.tokenized.tolist()\n",
+    "texts = english_stop_rem.tolist()\n",
     "corpus = [dictionary.doc2bow(text) for text in texts]"
    ]
   },
