Final change to 4

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -49,7 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pprint\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle as pkl\n",
@@ -2325,25 +2324,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "has_keyword = final_df.keywords.dropna().map(lambda x: len(x) > 0 )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "has_keyword.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "final_df = final_df[~final_df.keywords.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_keyword = final_df.keywords.map(lambda x: len(x) > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df[has_keyword].main.head(10)"
    ]
   },
   {
