Fixing order of some things

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -2529,6 +2529,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<iframe width='900' height=\"500\" src=\"dist.html\"></iframe>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2677,10 +2687,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df2 = twitter_df2[~twitter_df2.published.isnull()]\n",
-    "\n",
     "twitter_df2.rename(columns={'createdAt':'published'}, inplace=True)\n",
-    "\n",
+    "twitter_df2 = twitter_df2[~twitter_df2.published.isnull()]\n",
     "twitter_df2['published'] = twitter_df2['published'].astype(str)"
    ]
   },
