Adding changes to project & maps

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -56,6 +56,7 @@
     "import pickle as pkl\n",
     "import pyspark as ps\n",
     "import seaborn as sns\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Part 1\n",
@@ -1125,7 +1126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we cannot display folium maps in an _'.ipynb'_ file on GitHub, in addition it being quite large, we save our map to an HTML file so it an be viewed independently."
+    "As the map is quite large and does not display well directly we save our map to an HTML file so it an be viewed in the widget below or independently."
    ]
   },
   {
@@ -1153,7 +1154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that tweets are strongly concentrated in urban centers. This will have to be taken into consideration when looking at the Röstigraben and urban/rural differences."
+    "We see that tweets are strongly concentrated in urban centers.\n",
+    "This will have to be taken into consideration when looking at the Röstigraben and urban/rural differences."
    ]
   },
   {
@@ -1248,24 +1250,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fr_dict.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "de_dict.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1276,7 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have our (clean) data, we simply run all the previous NLP methods on our dictionaries."
+    "Once we have our (clean) data, we simply run all the previous NLP methods on our dictionaries. We introduce a remove_stops method that will be used later, when building or LDA topic model."
    ]
   },
   {
@@ -1318,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After stemming and stop word removal, the dictionaries look like this :"
+    "After stemming the words now look like this:"
    ]
   },
   {
@@ -1328,26 +1312,6 @@
    "outputs": [],
    "source": [
     "en_dict.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fr_dict.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "de_dict.head()"
    ]
   },
   {
@@ -1391,13 +1355,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We perform the actual algorithm in a script and save the results into a pickle file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The match_dict function works on two lists of lists, which makes it quite time intensive. However, working on this list of lists has the great benefit in that it is able to find matches that are separated by a word, such as 'feeling very blue', and it can deal with words that are in an inverted word order, which may occur due to grammatical reasons in german.\n",
+    "\n",
     "Now that we have our dictionaries, we filter the tweets to keep the ones where keyword occurs at least once in the tweets.\n",
     "\n",
     "To find matches, we apply a mapping in the following way:"
@@ -1423,7 +1382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.1. Dictonary 1\n",
+    "### 3.3.1. Dictonary 1\n",
     "\n",
     "\n",
     "We define the following function to look at keyword occurences and coocurrences:"
@@ -1456,32 +1415,42 @@
    "outputs": [],
    "source": [
     "def get_coocurrences(filtered):\n",
+    "    #get words that have more than one occurence\n",
     "    return filtered[filtered.keywords.map(lambda x: 3 > len(x) > 1)].keywords.map(lambda x: [' '.join(sub) for sub in x])\n",
     "\n",
     "def draw_coocurences(cooccurences):\n",
+    "    \n",
     "    dictionary = corpora.Dictionary(cooccurences)\n",
-    "\n",
+    "    #transfrom coocurences to edgepairs for easy usage\n",
     "    edges = cooccurences.map(lambda x: [dictionary.token2id[sub] for sub in x])\n",
     "\n",
     "    lists = dictionary.token2id.keys()\n",
-    "\n",
     "    G = nx.Graph()\n",
     "    G.add_nodes_from(lists)\n",
-    "    #G.add_edges_from(edges, weight=1)\n",
     "\n",
+    "    #add edges to graph\n",
     "    for edge in cooccurences:\n",
     "        if(G.has_edge(edge[0], edge[1])):\n",
+    "    #increase weight on graph for edges that occur more than once\n",
     "            weight = G[edge[0]][edge[1]]['weight']\n",
     "            G.add_edge(edge[0], edge[1], weight = 1+weight)\n",
     "        else:\n",
     "            G.add_edge(edge[0], edge[1], weight = 1)\n",
     "\n",
     "    edges,weights = zip(*nx.get_edge_attributes(G,'weight').items())\n",
-    "\n",
+    "    \n",
+    "    #scale size of graph in relation to number of words\n",
     "    size = len(lists)/2\n",
     "    plt.figure(figsize=(size, size))\n",
-    "    nx.draw_circular(G, with_labels=True, width=np.sqrt(weights), node_size=2000, node_color='w')\n",
+    "    nx.draw_circular(G, with_labels=True, width=(weights), node_size=2000, node_color='w')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now look at what kind of results the filtering provides:"
    ]
   },
   {
@@ -1543,6 +1512,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We see that depression and suicide seem to be frequently coocurring words. This makes sense, as it is depressed people that commit suicide."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**French results :**"
    ]
   },
@@ -1589,6 +1565,13 @@
    "source": [
     "cooccurences = get_coocurrences(small_french_filtered)\n",
     "draw_coocurences(cooccurences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We again find the coocurence of depressed and suicde in french."
    ]
   },
   {
@@ -1646,7 +1629,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.2. Dictionary 2\n",
+    "German also shows the connection betweet suicide and depression, just like french and english."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3.2. Dictionary 2\n",
     "\n",
     "\n",
     "We now look at the second dictionary retrived from previous research. This dictionary contains a broader range of words, and is a superset of the previous dictionary."
@@ -1786,6 +1776,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We note that the most frequent words are again 'sad', followed by expressions of loneliness and emptiness."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1793,13 +1790,6 @@
    "source": [
     "cooccurences = get_coocurrences(german_filtered)\n",
     "draw_coocurences(cooccurences)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We note that the most frequent words are again 'sad', followed by expressions of loneliness and emptiness."
    ]
   },
   {
@@ -2116,7 +2106,7 @@
    "outputs": [],
    "source": [
     "#Code used to form the LDA model\n",
-    "ldamodel = models.LdaMulticore(corpus, id2word=dictionary, num_topics=15, workers=3, iterations=100, passes=10)"
+    "ldamodel = models.LdaMulticore(corpus, id2word=dictionary, num_topics=5, workers=3, iterations=100, passes=10)"
    ]
   },
   {
@@ -2132,8 +2122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ldamodel = models.LdaModel.load('models/english.model')\n",
-    "ldamodel.show_topics()"
+    "ldamodel = models.LdaModel.load('models/english.model')"
    ]
   },
   {
@@ -2352,7 +2341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cooccurences = get_coocurrences(final_df[has_keyword][no_w])\n",
+    "cooccurences = get_coocurrences(final_df[has_keyword])\n",
     "draw_coocurences(cooccurences)"
    ]
   },
@@ -2442,7 +2431,7 @@
    "outputs": [],
    "source": [
     "#looking at users with more than 25 posts for visibility\n",
-    "ax = user_posts[user_posts > 25].plot(kind='bar')\n",
+    "ax = user_posts[user_posts > 10].plot(kind='bar')\n",
     "plt.setp(ax.get_xticklabels(), visible=False)\n",
     "plt.show()"
    ]
@@ -2494,7 +2483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_daily(final_df[has_keyword][no_w])\n",
+    "plot_daily(final_df[has_keyword])\n",
     "plot_daily(final_df[final_df.sentiment == 'POSITIVE'])\n",
     "plt.xlabel('hour')\n",
     "plt.ylabel('number of tweets')\n",
@@ -2579,8 +2568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipalities_0 = municipalities[municipalities.counts < 1]\n",
-    "municipalities_1 = municipalities[municipalities.counts >= 1]"
+    "municipalities_0 = municipalities[municipalities.counts < 5]\n",
+    "municipalities_1 = municipalities[municipalities.counts >= 5]"
    ]
   },
   {
@@ -2596,12 +2585,14 @@
     "swiss_map.choropleth(municipalities_1.to_json(), data = municipalities_1,\n",
     "                     key_on = 'feature.properties.{}'.format('id'),\n",
     "                    columns = ['id', 'counts'], fill_color = 'PuRd',\n",
-    "                     legend_name='Number of tweets', fill_opacity=0.9)\n",
+    "                     legend_name='Number of tweets', fill_opacity=0.9,\n",
+    "                     threshold_scale=[5,50,  100, 250, 500]\n",
+    "                    )\n",
     "#layer with municipalities containing less than 10 tweets in total\n",
     "swiss_map.choropleth(municipalities_0.to_json(), data = municipalities_0, \n",
     "                     key_on = 'feature.properties.{}'.format('id'),\n",
     "                     columns = ['id', 'counts'], fill_color = 'PuBu', \n",
-    "                     threshold_scale=[0, 1], legend_name='Area of little to no data',\n",
+    "                     threshold_scale=[0, 5], legend_name='Area of little to no data',\n",
     "                     fill_opacity=0.1, line_opacity=0.3)"
    ]
   },
@@ -2901,6 +2892,20 @@
    "metadata": {},
    "source": [
     "Despite some of the issues with the dataset we run the keyword matching algorithm on it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#final_df = pd.read_pickle('data/twitter-swisscom/final_english_keyworded_tweets.pkl')\n",
+    "final_df  = final_df[~final_df.keywords.isnull()]\n",
+    "has_keyword = final_df.keywords.map(lambda x: len(x) > 0)\n",
+    "cooccurences = get_coocurrences(final_df[has_keyword])\n",
+    "plot_occurences(final_df[has_keyword].keywords)\n",
+    "draw_coocurences(cooccurences)"
    ]
   },
   {
