Added notebook links

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook follows the methodology described in our report in order to answer our research questions.\n",
+    "This notebook follows the methodology described in our report in order to answer our research questions. We provided a NBViewer notebook link to permit to display the maps.\n",
     "\n",
     "We provide the following overview for easier navigation:"
    ]
@@ -23,20 +23,20 @@
     "### Overview:\n",
     "\n",
     "<ol start=\"0\">\n",
-    "  <li><b>Data Collection &amp; Preliminary Analysis:</b> description of our dataset retrieval and quick analysis of our datasets to familiarize ourselves with them</li>\n",
-    "  <li><b><i>Spinn3r</i> Data Treatment:</b> \n",
+    "  <li><a href=\"#t1\"><b>Data Collection &amp; Preliminary Analysis:</b></a> description of our dataset retrieval and quick analysis of our datasets to familiarize ourselves with them</li>\n",
+    "  <li><a href=\"#t2\"><b><i>Spinn3r</i> Data Treatment:</b></a> \n",
     "      application of our cleaning and NLP pipeline to the $1^{st}$ dataset</li>\n",
-    "  <li><b><i>Spinn3r</i> Dataset Description:</b> \n",
+    "  <li><a href=\"#t3\"><b><i>Spinn3r</i> Dataset Description:</b></a> \n",
     "      a first (less naive) analysis of the dataset</li>\n",
-    "  <li><b>Dictionary Construction</b> (using the <b><i>Spinn3r</i></b> dataset)<b>:</b> \n",
+    "  <li><a href=\"#t4\"><b>Dictionary Construction</b></a> (using the <b><i>Spinn3r</i></b> dataset)<b>:</b> \n",
     "      creation (and refining) of the dictionary we are going to use on both datasets</li>\n",
-    "  <li><b><i>Spinn3r</i> Dataset Analysis:</b> \n",
+    "  <li><a href=\"#t5\"><b><i>Spinn3r</i> Dataset Analysis:</b></a> \n",
     "      first answer to our research questions using the <i>\"smaller\" <b>Spinn3r</b></i> set</li>\n",
-    "  <li><b><i>twitter-swisscom</i> Data Processing Pipeline:</b> \n",
+    "  <li><a href=\"#t6\"><b><i>twitter-swisscom</i> Data Processing Pipeline:</b></a> \n",
     "      after using the <b><i>Spinn3r</i></b> set as a proof of concept, we apply the cleaning, NLP and keyword-based selection methods to our $2^{nd}$ dataset</li>\n",
-    "      <li><b><i>twitter-swisscom</i> Dataset Analysis:</b> \n",
+    "      <li><b><a href=\"#t7\"><i>twitter-swisscom</i> Dataset Analysis:</b></a> \n",
     "      we analyse the information given in this new dataset</li>\n",
-    "  <li><b>Conclusion</b></li>\n",
+    "  <li><a href=\"#t8\"><b>Conclusion</b></a></li>\n",
     "</ol>"
    ]
   },
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Data Collection & Preliminary Analysis"
+    "<h2 id=\"t1\">0. Data Collection & Preliminary Analysis</h2>"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. _Spinn3r_ Data Treatment"
+    "<h2 id=\"t2\">1. _Spinn3r_ Data Treatment</h2>"
    ]
   },
   {
@@ -892,7 +892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Spinn3r Dataset Description"
+    "<h2 id=\"t3\">2. Spinn3r Dataset Description</h2>"
    ]
   },
   {
@@ -1238,7 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Dictionary Construction"
+    "<h2 id=\"t4\">3. Dictionary Construction</h2>"
    ]
   },
   {
@@ -2442,7 +2442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Spinn3r Dataset Analysis:"
+    "<h2 id=\"t5\">4. Spinn3r Dataset Analysis:</h2>"
    ]
   },
   {
@@ -2837,7 +2837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. twitter-swisscom Data Processing Pipeline"
+    "<h2 id=\"t6\">5. twitter-swisscom Data Processing Pipeline</h2>"
    ]
   },
   {
@@ -2962,7 +2962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. twitter-swisscom Dataset Analysis"
+    "<h2 id=\"t7\">6. twitter-swisscom Dataset Analysis</h2>"
    ]
   },
   {
@@ -3082,7 +3082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Conclusion"
+    "<h2 id=\"t8\">7. Conclusion</h2>"
    ]
   },
   {
